--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
 body {
-  margin: 0;
+
+  display: flex;
+  justify-content: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
+
+}
+.btn{
+  cursor: pointer;
+  background-color: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container-1{
+  display: flex;
+  justify-content: space-around;
+  width: 100vw;
 }
+
+.container-1-child1, .container-1-child2, .container-1-child3{
+  background-color: #D0EBF2;
+  border-radius: 10%;
+
+}
+
+.container-1-child1, .container-1-child3{
+  width: 129px;
+  height: 127px;
+
+}
+
+.container-1-child2{
+  width: 50%;
+  height: 424px;
+}
+
