--- a/src/index.css
+++ b/src/index.css
@@ -84,3 +84,18 @@ body {
 
 }
 
+.btn-upload{
+  background-color: #F3167D;
+  width: 129px;
+  
+  border-radius: 10px;
+
+
+
+}
+
+input{
+  
+  background-color: white;
+}
+
