--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,22 @@ body {
   display: flex;
   justify-content: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  height: 100vh;
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   text-align: center;
-
+  width: 100%;
+  overflow-x: hidden;
 }
+
+.initial-screen{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+  background-color: #D0EBF2;
+}
+
 .btn{
   cursor: pointer;
   background-color: none;
@@ -68,14 +78,20 @@ body {
 .btn{
   background: none;
   border: none;
-
 }
+
 .btn-2{
   
   width: 129px;
   height: 127px;
 }
 
+.text{
+  font-size: 16px;
+  color: #0583F2;
+  font-weight: bold;
+
+}
 .btn-2{
   background-color: rgb(255, 255, 255);
   width: 129px;
@@ -87,15 +103,20 @@ body {
 .btn-upload{
   background-color: #F3167D;
   width: 129px;
-  
   border-radius: 10px;
+  height: 30px;
+  font-size: 17px;
+  color: white;
+  background: none;
+  border: none;
+}
 
-
-
+.btn-play{
+  background: none;
+  border: none;
+  margin-top: 10px;
 }
 
 input{
-  
   background-color: white;
 }
-
